
=head1 DATE

$LastChangedDate$

=head1 DESCRIPTION

This document lists the Changes to Bricolage introduced with each release.

=head1 VERSION 1.10.4 "" (2007-??-??)

=head2 Improvements

=item *

Nicer use of the "Bricolage Instance Name" preference, now used on every page.
[Phillip Smith]

=over

=item *

More German corrections. [Steffen Schwigon]

=back

=head2 Bug Fixes

=over

=back

=head1 VERSION 1.10.3 "Finally" (2007-08-09)

=head2 Improvements

=over

=item *

If C<Term::ReadPassword> isn't found during installation, a better error
message is displayed. [Scott]

=item *

Added output channel name to "Could not find template" error message in 
the Mason Burner. [Paul Orrock]

=item *

The contributed Linux start script (F<contrib/start_scripts/linux>) now
restarts the C<bric_queued> server when the C<restart> command is used and the
C<bric_queued> server is enabled. It also now also passes a log file name to
C<bric_queued> so that publishing errors can more easily be traced. [David]

=item *

Overriding Mason inheritance in story element templates by setting C<$inherit>
in the C<< <%flags> >> block now works correctly. Thanks to Alexey Sheynuk for
tracking down the issue. Reported by Ashlee Caul. [David]

=item *

Added start script for FreeBSD, F<contrib/start_scripts/freebsd>. [David]

=item *

Updated the Portuguese localizations. [Pedro Custodio]

=item *

A story being published for the first time now has its C<publish_status> set
to true I<before> it is published, instead of aftewards. This both prevents an
exception when a template tries to save a story that has not been published
before, and eliminates the need for templates to set the C<publish_status> on
a story before calling C<publish_another()> for a another story that will
search for the current story in the database. Reported by Rod Taylor (Ticket #
1230). [David]

=item *

Related stories and media can no longer be added to container elements not